src/passes/snapshots/lumina2__passes__cst_gen__test__expr__expr_assignment.snap
---
source: src/passes/cst_gen.rs
expression: some_ident = 123 + other_ident
---
Assign(
    Assign {
        assignee: Variable(
            Variable {
                variable: Ident(
                    "some_ident",
                ),
            },
        ),
        tok_eq: Eq,
        value: Binary(
            Binary {
                lhs: Literal(
                    Integer(
                        IntegerLiteral(
                            IntLit(
                                123,
                            ),
                        ),
                    ),
                ),
                op: Plus(
                    Plus,
                ),
                rhs: Variable(
                    Variable {
                        variable: Ident(
                            "other_ident",
                        ),
                    },
                ),
            },
        ),
    },
)
