src/passes/snapshots/lumina2__passes__cst_gen__test__expr__expr_ident.snap
---
source: src/passes/cst_gen.rs
expression: some_ident
---
Variable(
    Variable {
        variable: Ident(
            "some_ident",
        ),
    },
)
