src/passes/snapshots/lumina2__passes__cst_gen__test__expr__expr_int_lit.snap
---
source: src/passes/cst_gen.rs
expression: "123"
---
Literal(
    Integer(
        IntegerLiteral(
            IntLit(
                123,
            ),
        ),
    ),
)
