src/passes/snapshots/lumina2__passes__cst_gen__test__expr__expr_logical_and.snap
---
source: src/passes/cst_gen.rs
expression: true && something
---
Binary(
    Binary {
        lhs: Literal(
            Boolean(
                True(
                    True,
                ),
            ),
        ),
        op: LogicalAnd(
            AmpAmp,
        ),
        rhs: Variable(
            Variable {
                variable: Ident(
                    "something",
                ),
            },
        ),
    },
)
