src/passes/snapshots/lumina2__passes__cst_gen__test__expr__expr_un_op.snap
---
source: src/passes/cst_gen.rs
expression: "-123"
---
Unary(
    Unary {
        op: Negative(
            Minus,
        ),
        value: Literal(
            Integer(
                IntegerLiteral(
                    IntLit(
                        123,
                    ),
                ),
            ),
        ),
    },
)
