src/passes/snapshots/lumina2__passes__cst_gen__test__expr__if_only_if.snap
---
source: src/passes/cst_gen.rs
expression: "if condition { something }"
---
If {
    tok_if: If,
    condition: Variable(
        Variable {
            variable: Ident(
                "condition",
            ),
        },
    ),
    then: Block {
        tok_l_brace: LBrace,
        statements: [
            Expr(
                ExprStatement {
                    expr: Variable(
                        Variable {
                            variable: Ident(
                                "something",
                            ),
                        },
                    ),
                    tok_semicolon: None,
                },
            ),
        ],
        tok_r_brace: RBrace,
    },
    trailer: None,
}
