src/passes/snapshots/lumina2__passes__cst_gen__test__expr__literal_false.snap
---
source: src/passes/cst_gen.rs
expression: "false"
---
Boolean(
    False(
        False,
    ),
)
